--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -21,9 +21,9 @@
 
 
 body {
-    font-family: var(--font-family);
-    color: var(--slate);
-    background-color: var(--white);
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
+    background-color: white;
     padding: 20px;
 }
 
@@ -41,26 +41,26 @@ a {
 /* --------------------------------------------------------header section------------------------------------------------------- */
 
 .logo1 {
-    font-family: var(--second-family);
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--iris);
+    color: #4d5ae5;
 }
 
 .navbar .logo2 {
-    color: var(--navy-blue);
+    color: #2e2f42;
 }
 
 .nav-link {
-    font-family: var(--font-family);
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
 }
 
 .contact {
@@ -68,19 +68,19 @@ a {
 }
 
 .contact-tab-link {
-    font-family: var(--font-family);
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate);
+    color: #434455;
 }
 
 .nav-link:hover,
 .nav-link:focus,
 .contact-tab-link:hover,
 .contact-tab-link:focus {
-    color: var(--ocean);
+    color: #404bbf;
 }
 
 
@@ -88,14 +88,14 @@ a {
 /* --------------------------------------------------------hero section------------------------------------------------------- */
 
 .hero {
-    background-color: var(--navy-blue);
+    background-color: #2e2f42;
 }
 
 .hero-title {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    color: var(--white);
+    color: white;
     text-align: center;
 }
 
@@ -104,8 +104,8 @@ a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: var(--white);
-    background-color: var(--iris);
+    color: white;
+    background-color: #4d5ae5;
 }
 
 
@@ -117,34 +117,34 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
 }
 
 .features-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate);
+    color: #434455;
 }
 
 
 /* --------------------------------------------------------team section------------------------------------------------------- */
 
 .team {
-    background-color: var(--cloud);
+    background-color: #f4f4fd;
 }
 
 .team-title {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
     text-align: center;
     text-transform: capitalize;
 }
 
 .team-tab {
-    background-color: var(--white);
+    background-color: white;
 }
 
 .team-name {
@@ -152,14 +152,14 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
 }
 
 .team-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate);
+    color: #434455;
 }
 
 
@@ -169,7 +169,7 @@ a {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
     text-align: center;
     text-transform: capitalize;
 }
@@ -179,14 +179,14 @@ a {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);
+    color: #2e2f42;
 }
 
 .port-cd-tex {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate);
+    color: #434455;
 }
 
 
@@ -194,17 +194,17 @@ a {
 
 
 .footer {
-    background-color: var(--navy-blue);
+    background-color:#2e2f42;
 }
 
 .footer .logo2 {
-    color: var(--cloud);
+    color: #f4f4fd;
 }
 
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--cloud);
+    color: #f4f4fd;
 }
 
