--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@ a {
 
 /* --------------------------------------------------------header section------------------------------------------------------- */
 
-.logo1 {
-    font-family: "raleway", sans-serif;
+.logo {
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
@@ -41,7 +41,7 @@ a {
     color: #4d5ae5;
 }
 
-.navbar .logo2 {
+.navbar .stu {
     color: #2e2f42;
 }
 
@@ -188,7 +188,7 @@ a {
     background-color: #2e2f42;
 }
 
-.footer .logo2 {
+.footer .stu {
     color: #f4f4fd;
 }
 
