--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ a {
 
 /* --------------------------------------------------------portfolio section------------------------------------------------------- */
 
-.portfolio-title {
+.port-title {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
@@ -173,7 +173,7 @@ a {
     color: #2e2f42;
 }
 
-.port-cd-tex {
+.port-cd-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
